--- a/app/app.css
+++ b/app/app.css
@@ -1,18 +1,17 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+    background: linear-gradient(0deg, rgb(0, 0, 0), rgb(66, 6, 6));
     display: flex;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     height: 100vh;
     width: 100vw;
     justify-content: center;
-    align-items: center;
   }
   
   main {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
   }
   
   button {
@@ -58,8 +57,36 @@ body {
   li:hover {
     background: #dadbf9;
   }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
-  a {
+  .links {
     font-weight: 800;
     text-decoration: none;
+    color: black;
+    margin: 10px;
+  }
+
+  a:hover {
+    color: white
+  }
+  
+  img {
+    filter: brightness(0.4)
+  }
+
+  #signIn {
+    color: white
+  }
+
+  #signIn:hover {
+    color: rgb(65, 61, 61)
+  }
+
+  #imgDiv {
+    border: #1a1a1a;
   }
